# Tensor-network-variational-diagonalization-of-quantum-many-body-spectra

./: .gitignore  AGENTS.md  CITATION.cff  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: README.md  __init__.py  plot_schmidt_resources.py  spectrum_label_control.py
data/: README.md  discarded_schmidt_weights.csv  ground_state_schmidt_tail.csv  matched_ising_xxz_benchmark.csv
docs/: ARCHITECTURE.md  ORIGINAL_CORE.md
src/tnvd/: __init__.py  __main__.py  autompo_models.py  class_evolve_TNO_cut_dims.py  cli.py  config.py  evolution.py  exact_diagonalization.py  loss.py  models.py  mpo_factory.py  quickstart.py  run_automation.py  spectrum_analysis.py  tensors.py  tn_utils.py  train.py
src/tnvd/_vendor/: __init__.py
src/tnvd/_vendor/autompo/: NOTICE.md  __init__.py  class_fsa.py  class_named_data.py  mpo_gadgets.py  opr_pool.py
tests/: test_loss.py  test_models.py  test_mpo_factory.py  test_original_pipeline.py  test_pipeline.py  test_reference_tools.py
tools/: README.md  exact_diagonalization.py
