[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tnvd"
version = "0.2.0"
description = "Tensor-network variational diagonalization of quantum many-body spectra"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
tnvd = "tnvd.quickstart:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
  "src/tnvd/class_evolve_TNO_cut_dims.py",
  "src/tnvd/config.py",
  "src/tnvd/run_automation.py",
  "src/tnvd/tn_utils.py",
]
